--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer component {
+  .link{
+    @apply hover:underline cursor-pointer
+  }
+}
